--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
+
+
 .button {
     color: magenta;
     background-color: blue;
@@ -19,7 +26,6 @@
     background-color: black;
 }
 
-.raindivs {
-    padding: 2%;
-    color: red;
+img.poppypic {
+    padding: auto;
 }
